mcacountdown/betastyle.css
/* ... */
#body{
    background-color:var(--mainbgcolor);
    overflow-x:hidden;
    height: 100%;
    min-height: 100vh;
    margin: 0px;
    padding:0px;
}

* {
    scrollbar-width: auto;
    scrollbar-color: #8426ff #0d0d0d;
}

html{
    scroll-behavior: smooth;
    height: 100%;
    min-height: 100vh;
    margin: 0;
}

html, body {
    height: 100%;
    min-height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}


::-moz-selection {
    color: white;
    background: #8426ff;
}

input[type="color"] {
    transition: 0.5s all;
}

::selection {
    color: white;
    background: #8426ff;
}

.colorpicker {
    margin: 10px;
    height: 0.5in;
    width: 1in;
    font-size: 20px;
    font-weight: 100;
    border-radius: 20px;
    outline: 1px solid #8426ff;
    background: var(--mainbgcolor);
    border: none;
    cursor: pointer;
    vertical-align:top;
    display:inline-block;
}

.clradd{
    margin-top:15px;
    width:calc(4in + 30px) !important;
    color:white;
    font-size: 20px;
    font-weight: 100;
    cursor: pointer;
    transition:0.5s all ease;
    filter: grayscale(0%) !important;
}

.clraddoff{
    filter: grayscale(100%) !important;
    cursor: not-allowed !important;
    transition: 0.5s all ease;
}

.colorpicker-container {
transition: all 0.2s; /* Delay width transition until after opacity */
width: auto; /* Adjust as needed */
opacity: 1;
transform:scale(1);
position: relative;
display: inline-block;
}

#colorPickersContainer{
    transition:0.25s all ease;
    font-size:0;
}

#backgroundpickercontainer{
    font-size:0;
}

#animatedbackground {
    opacity: 1;
    transition: opacity 0.5s ease-in-out;
    position:fixed;
    z-index:-3;
    left:0;
    top:0;
    will-change: opacity;
}

.backgroundpicker {
    margin: 10px !important;
    height: 0.5in;
    width: 1in;
    font-size: 20px;
    font-weight: 100;
    border-radius: 20px;
    outline: 1px solid #8426ff;
    background: var(--mainbgcolor);
    border: none;
    transition: 0.3s all;
}

.selectedbackgroundpicker {
    margin: 10px !important;
    height: 0.5in;
    width: 1in;
    font-size: 20px;
    font-weight: 100;
    border-radius: 20px;
    outline: 3px solid var(--selectedgreen);
    background: var(--mainbgcolor);
    border: none;
    transition: 0.3s all;
}

.fontpicker {
    color: var(--mainforegroundcolor) !important;
    line-height: 100px;
    margin: 10px !important;
    width: 1in;
    font-size: 20px;
    border-radius: 20px;
    outline: 1px solid #8426ff;
    background: var(--mainbgcolor);
    border: none;
    transition: 0.3s all;
    padding-top: 20px;
}

.selectedfontpicker {
    outline: 3px solid var(--selectedgreen);
    background: var(--selectedgreengradient);
    border: none;
    transition: 0.3s all;
    padding-top: 20px;
    color: var(--mainforegroundcolor) !important;
    line-height: 100px;
    margin: 10px !important;
    width: 1in;
    font-size: 20px;
    border-radius: 20px;
}

.disabledcolorpicker {
    margin: 10px;
    height: 0.5in;
    width: 1in;
    font-size: 20px;
    font-weight: 100;
    border-radius: 20px;
    outline: 1px solid #202020;
    background: var(--mainbgcolor);
    border: none;
    opacity: 0.5;
    cursor: not-allowed;
}

    .disabledcolorpicker::-webkit-color-swatch {
        border-radius: 15px;
        border: none;
        width: 35px;
        margin-left: 1px;
        margin-right: 1px;
        filter: grayscale();
    }

    .disabledcolorpicker::-moz-color-swatch {
        border-radius: 15px;
        border: none;
        width: 35px;
        margin-left: 1px;
        margin-right: 1px;
        filter: grayscale();
    }

.colorpicker:focus {
    margin: 10px;
    height: 0.5in;
    width: 1in;
    font-size: 20px;
    font-weight: 100;
    border-radius: 20px;
    outline: 1px solid #8426ff;
    background: var(--mainbgcolor);
    animation: pulseborder 2s infinite;
}

button{
    color:var(--mainforegroundcolor);
}

.remove-button {
    position: absolute;
    top: 0px;
    right: 0px;
    width: 30px;
    height: 30px;
background: rgba(255, 0, 0, 0.46);
border-radius: 16px;
box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
backdrop-filter: blur(6.8px);
-webkit-backdrop-filter: blur(6.8px);
border: 1px solid rgba(255, 0, 0, 0.64);
    color: white;
    border-radius: 50%;
    text-align: center;
    line-height: 25px;
    cursor: pointer;
    opacity:0;
    transition:opacity 0.3s ease-in-out;
    font-family: Fredoka One;
    font-size:initial;
}


.colorpicker-container:hover .remove-button,
.colorpicker:focus + .remove-button {
    opacity:1;
}



@keyframes pulseborder {
    1% {
        outline: 1px solid #8426ff;
    }

    50% {
        outline: 1px solid var(--mainbgcolor);
    }

    100% {
        outline: 1px solid #8426ff;
    }
}



.colorpicker::-webkit-color-swatch {
    border-radius: 15px;
    border: none;
    width: 35px;
    margin-left: 1px;
    margin-right: 1px;
}

.colorpicker::-moz-color-swatch {
    border-radius: 15px;
    border: none;
    width: 35px;
    margin-left: 1px;
    margin-right: 1px;
}

.datepicker {
    color: var(--mainforegroundcolor);
    border-radius: 20px;
    padding: 20px;
    font-size: 20px;
    font-weight: 100;
    outline: 1px solid #8426ff;
    background: var(--inputbackground);
    font-family: 'Fredoka One';
    border: 0px transparent;
}

.progressdatepicker {
    color: var(--mainforegroundcolor);
    border-radius: 20px;
    padding: 20px;
    font-size: 20px;
    font-weight: 100;
    outline: 1px solid #8426ff;
    background: var(--inputbackground);
    font-family: 'Fredoka One';
    border: 0px transparent;
}
/* ... */

